# lab

./: .gitignore  .gitmodules  LICENSE  README.md  _headers  cockle-config-in.json  jupyter-lite.json  overrides.json  requirements.txt  v0.1.0  v0.2.0  v0.2.1  v0.3.0  v0.4.0  v0.4.1  v0.4.2
.github/workflows/: deploy.yml  gh-pages.yml
api/contents/: all.json
data/: hplp_ml_q_dx=2.0.grib
fcpy/: pyproject.toml
fcpy/fcpy/: __init__.py  codecs.py  compressors.py  dataset.py  datasets.py  metrics.py  sigma.py  suite.py  turing.py  utils.py
files/: basemap.ipynb  cartopy.ipynb  cfgrib.ipynb  lab.ipynb  turing.ipynb
main/: jupyter-lite.json  overrides.json
main/consoles/: index.html
main/edit/: index.html
main/files/: constraints.txt  requirements.in  requirements.txt
main/lab/: index.html
main/notebooks/: index.html
main/repl/: index.html
main/tree/: index.html
patches/: pyodide.patch
static/pyodide/: Cartopy-0.21.1-cp311-cp311-emscripten_3_1_46_wasm32.whl  Fiona-1.8.22-cp311-cp311-emscripten_3_1_46_wasm32.whl.metadata  Jinja2-3.1.2-py3-none-any.whl  Markdown-3.6-py3-none-any.whl  MarkupSafe-2.1.3-cp311-cp311-emscripten_3_1_46_wasm32.whl  MetPy-1.5.1-py3-none-any.whl  Pint-0.23-py3-none-any.whl  (+147 more)
tools/: .gitignore  check-imports.mjs  clean-dist.py  inline-dist.py  lock-diff.py  makelock.mjs  pypa-simple.py  pypi-lock.mjs  requirements-from-dependencies.py  requirements.py  server.py
v0.1.0/: jupyter-lite.json  overrides.json
v0.2.0/: jupyter-lite.json
v0.2.1/: jupyter-lite.json  overrides.json
v0.3.0/: jupyter-lite.json
(+1435 files in other folders)
