[project]
name = "fcpy"
version = "0.2.0"
authors = [
    { name = "ECMWF" },
    { name = "Juniper Tyree", email = "juniper.tyree@helsinki.fi" },
]
description = "ECMWF Field Compression Laboratory"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cartopy",
    "cfgrib",  # only for pre-loading
    "cmcrameri",  # only for pre-loading
    "cycler",
    "dask",
    "h5netcdf",  # only for pre-loading
    "ipython",  # provided by JupyterLite
    "ipyfilite",
    "lzma",  # only for pre-loading
    "matplotlib",
    "metpy",  # only for pre-loading
    "netcdf4",  # only for pre-loading
    "numcodecs",
    "numpy",
    "pandas",
    "pyodide-http",
    "pysz",
    "scikit-image",
    "xarray",
    "zarr",
    "zfpy",  # only for pre-loading
]

[project.optional-dependencies]
dev = ["black", "isort", "pyproject-flake8"]

[project.urls]
homepage = "https://github.com/ecmwf/field-compression"
repository = "https://github.com/ecmwf/field-compression.git"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py37']
line-length = 79
preview = true

[tool.isort]
py_version = 37
profile = "black"
line_length = 79

[tool.flake8]
